# verilated-rs

./: Cargo.toml  LICENSE-MIT  README.md
example/: Cargo.toml  build.rs
example/rtl/: counter.v
example/src/: main.rs
examples/tracing/: Cargo.toml  build.rs
examples/tracing/src/: main.rs
verilated/: Cargo.toml  build.rs
verilated-macro/: Cargo.toml
verilated-macro/src/: comments.rs  error.rs  expand.rs  lib.rs
verilated-module/: Cargo.toml
verilated-module/src/: lib.rs
verilated/src/: api.rs  cov.rs  fst.rs  lib.rs  test_bench.rs  vcd.rs  verilated_shim.cpp  verilatedvcdc_shim.cpp  vpi.rs
verilated/src/vpi/: user.rs
verilated/tests/: timeunits.rs
verilator/: Cargo.toml
verilator/example/: Cargo.toml  build.rs
verilator/example/rtl/: counter.v  top.v
verilator/example/src/: main.rs
verilator/src/: gen.rs  lib.rs  module.rs
