[package]
name = "verilated-module"
authors = ["Dan Glastonbury <dan.glastonbury@gmail.com>"]
description = """
A procedural macro for replacing verilated marked up structs with include of generated code.
"""
version = "0.1.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/djg/verilated-rs"
homepage = "https://github.com/djg/verilated-rs"
keywords = ["verilator","verilog"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
quote = "0.5"
syn = { version = "0.13", features = ["full"] }
