[package]
name = "verilated"
description = """
Bindings to Verilated APIs for working with Verilator's generated verilog simulators.
"""
authors = ["Dan Glastonbury <dan.glastonbury@gmail.com>"]
version = "0.1.2"
license = "MIT/Apache-2.0"
repository = "https://github.com/djg/verilated-rs"
homepage = "https://github.com/djg/verilated-rs"
keywords = ["verilog", "simulator"]
categories = ["api-bindings"]

build = "build.rs"

[build-dependencies]
verilator = { path = "../verilator", version = "0.1", default-features = false }
cc = "1.0"
