[package]
name = "verilator"
version = "0.0.0"
authors = ["Dan Glastonbury <dan.glastonbury@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Automated generation of verilator test modules."

[dependencies]
cc = { version = "1.0", optional = true }
fnv = { version = "1.0", optional = true }
syn = { version = "0.13", features = ["extra-traits", "full", "visit"], optional = true }

[features]
gen = ["cc"]
module = ["fnv", "syn"]
default = ["gen"]