[package]
name = "verilator"
edition = "2018"
description = """
Automated generation of Verilator test modules.
"""
authors = ["Dan Glastonbury <dan.glastonbury@gmail.com>"]
version = "0.2.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/djg/verilated-rs"
homepage = "https://github.com/djg/verilated-rs"
keywords = ["verilator", "verilog"]
categories = ["development-tools::build-utils","development-tools::ffi", "simulation"]

[dependencies]
bindgen = "0.57"
cc = "1.0"
