[package]
name = "verilator"
description = """
Automated generation of Verilator test modules.
"""
authors = ["Dan Glastonbury <dan.glastonbury@gmail.com>"]
version = "0.1.6"
license = "MIT/Apache-2.0"
repository = "https://github.com/djg/verilated-rs"
homepage = "https://github.com/djg/verilated-rs"
keywords = ["verilator", "verilog"]
categories = ["development-tools::build-utils","development-tools::ffi", "simulation"]

[dependencies]
fnv = { version = "1.0", optional = true }
regex = "1.4"
syn = { version = "0.13", features = ["extra-traits", "full", "visit"], optional = true }

[features]
gen = []
module = ["fnv", "syn"]
default = ["gen"]
